nimcuda/cublas_api.nim


proc cublasStrttp*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                  A: ptr cfloat; lda: cint; AP: ptr cfloat): cublasStatus_t {.cdecl,
    importc: "cublasStrttp", dynlib: libName.}
proc cublasDtrttp*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                  A: ptr cdouble; lda: cint; AP: ptr cdouble): cublasStatus_t {.cdecl,
    importc: "cublasDtrttp", dynlib: libName.}
proc cublasCtrttp*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                  A: ptr cuComplex; lda: cint; AP: ptr cuComplex): cublasStatus_t {.
    cdecl, importc: "cublasCtrttp", dynlib: libName.}
proc cublasZtrttp*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                  A: ptr cuDoubleComplex; lda: cint; AP: ptr cuDoubleComplex): cublasStatus_t {.
    cdecl, importc: "cublasZtrttp", dynlib: libName.}
##  Batched LU - GETRF

proc cublasSgetrfBatched*(handle: cublasHandle_t; n: cint; A: ptr ptr cfloat; lda: cint;
                         P: ptr cint; info: ptr cint; batchSize: cint): cublasStatus_t {.
    cdecl, importc: "cublasSgetrfBatched", dynlib: libName.}
proc cublasDgetrfBatched*(handle: cublasHandle_t; n: cint; A: ptr ptr cdouble; lda: cint;
                         P: ptr cint; info: ptr cint; batchSize: cint): cublasStatus_t {.
    cdecl, importc: "cublasDgetrfBatched", dynlib: libName.}
proc cublasCgetrfBatched*(handle: cublasHandle_t; n: cint; A: ptr ptr cuComplex;
                         lda: cint; P: ptr cint; info: ptr cint; batchSize: cint): cublasStatus_t {.
    cdecl, importc: "cublasCgetrfBatched", dynlib: libName.}
proc cublasZgetrfBatched*(handle: cublasHandle_t; n: cint;
                         A: ptr ptr cuDoubleComplex; lda: cint; P: ptr cint;
                         info: ptr cint; batchSize: cint): cublasStatus_t {.cdecl,
    importc: "cublasZgetrfBatched", dynlib: libName.}
##  Batched inversion based on LU factorization from getrf

proc cublasSgetriBatched*(handle: cublasHandle_t; n: cint; A: ptr ptr cfloat; lda: cint;
                         P: ptr cint; C: ptr ptr cfloat; ldc: cint; info: ptr cint;
                         batchSize: cint): cublasStatus_t {.cdecl,
    importc: "cublasSgetriBatched", dynlib: libName.}
proc cublasDgetriBatched*(handle: cublasHandle_t; n: cint; A: ptr ptr cdouble; lda: cint;
                         P: ptr cint; C: ptr ptr cdouble; ldc: cint; info: ptr cint;
                         batchSize: cint): cublasStatus_t {.cdecl,
    importc: "cublasDgetriBatched", dynlib: libName.}
proc cublasCgetriBatched*(handle: cublasHandle_t; n: cint; A: ptr ptr cuComplex;
                         lda: cint; P: ptr cint; C: ptr ptr cuComplex; ldc: cint;
                         info: ptr cint; batchSize: cint): cublasStatus_t {.cdecl,
    importc: "cublasCgetriBatched", dynlib: libName.}
proc cublasZgetriBatched*(handle: cublasHandle_t; n: cint;
                         A: ptr ptr cuDoubleComplex; lda: cint; P: ptr cint;
                         C: ptr ptr cuDoubleComplex; ldc: cint; info: ptr cint;
                         batchSize: cint): cublasStatus_t {.cdecl,
    importc: "cublasZgetriBatched", dynlib: libName.}
##  Batched solver based on LU factorization from getrf

proc cublasSgetrsBatched*(handle: cublasHandle_t; trans: cublasOperation_t; n: cint;
                         nrhs: cint; Aarray: ptr ptr cfloat; lda: cint;
                         devIpiv: ptr cint; Barray: ptr ptr cfloat; ldb: cint;
                         info: ptr cint; batchSize: cint): cublasStatus_t {.cdecl,
    importc: "cublasSgetrsBatched", dynlib: libName.}
proc cublasDgetrsBatched*(handle: cublasHandle_t; trans: cublasOperation_t; n: cint;
                         nrhs: cint; Aarray: ptr ptr cdouble; lda: cint;
                         devIpiv: ptr cint; Barray: ptr ptr cdouble; ldb: cint;
                         info: ptr cint; batchSize: cint): cublasStatus_t {.cdecl,
    importc: "cublasDgetrsBatched", dynlib: libName.}
proc cublasCgetrsBatched*(handle: cublasHandle_t; trans: cublasOperation_t; n: cint;
                         nrhs: cint; Aarray: ptr ptr cuComplex; lda: cint;
                         devIpiv: ptr cint; Barray: ptr ptr cuComplex; ldb: cint;
                         info: ptr cint; batchSize: cint): cublasStatus_t {.cdecl,
    importc: "cublasCgetrsBatched", dynlib: libName.}
proc cublasZgetrsBatched*(handle: cublasHandle_t; trans: cublasOperation_t; n: cint;
                         nrhs: cint; Aarray: ptr ptr cuDoubleComplex; lda: cint;
                         devIpiv: ptr cint; Barray: ptr ptr cuDoubleComplex; ldb: cint;
                         info: ptr cint; batchSize: cint): cublasStatus_t {.cdecl,
    importc: "cublasZgetrsBatched", dynlib: libName.}
##  Deprecated

proc cublasUint8gemmBias*(handle: cublasHandle_t; transa: cublasOperation_t;
                         transb: cublasOperation_t; transc: cublasOperation_t;
                         m: cint; n: cint; k: cint; A: ptr char; A_bias: cint; lda: cint;
                         B: ptr char; B_bias: cint; ldb: cint; C: ptr char;
                         C_bias: cint; ldc: cint; C_mult: cint; C_shift: cint): cublasStatus_t {.
    cdecl, importc: "cublasUint8gemmBias", dynlib: libName.}
##  }}} cuBLAS Exported API
